# CareerPilot

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
app/: artifacts.py  main.py
app/agent_skills/: __init__.py  catalog.py
app/agents/: action_registry.py  assistant_planner.py  coordinator.py
app/config/: env.py
app/db/: analysis_migrations.py  models.py  repository.py
app/evals/: __init__.py  job_analysis.py  job_analysis_cli.py
app/extraction_overrides/: __init__.py
app/memory/: profile.example.yaml  profile_schema.py  profile_store.py
app/static/: app.js  index.html  styles.css
app/tools/: analysis_feedback.py  browser_job_fetcher.py  content_root_strategy.py  job_extraction.py  job_fetcher.py  job_fit_taxonomy.py  job_parser.py  learned_selector_store.py  llm_content_root_validator.py  llm_fit_validator.py  llm_global_chat.py  llm_job_chat.py  llm_job_guidance.py  llm_job_parser.py  llm_job_scorer.py  pdf_writer.py  prep_planner.py  profile_proposal_refiner.py  profile_update_intent.py  resume_generator.py  scoring.py  text_budget.py
docs/: README.md  analysis_chat_plan.md  architecture.md  evaluation.md  ingestion.md  job_fetching_tradeoffs.md  learning_guide.md  product_spec.md  project_roadmap.md  roadmap.md  self_evolving_extraction.md  target_company_ingestion_plan.md  workflow_runtime.md  workflow_runtime_plan.md
frontend/: README.md  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
scripts/: careerpilot
tests/: test_job_analysis.py  test_job_analysis_evals.py  test_workflow_foundation.py
(+25 files in other folders)
