[project]
name = "careerpilot"
version = "0.1.0"
description = "Local-first AI career workbench for job analysis, application tracking, resume targeting, and interview prep."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "pydantic>=2.7.0",
  "pyyaml>=6.0.1",
  "uvicorn>=0.30.0",
]

[project.scripts]
careerpilot-eval = "app.evals.job_analysis_cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]
browser = [
  "playwright>=1.45.0",
]
ai = [
  "langgraph>=0.2.0",
  "openai>=2.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["data*", "docs*", "tests*"]
